# open-thoughts

./: README.md
open_thoughts_3/: README.md  baseline_setup.py  pyproject.toml  requirements.txt
open_thoughts_3/cluster/: autoscaler.yaml
open_thoughts_3/database/: cli.py  models.py  utils.py
open_thoughts_3/dcft/: README.md  delete_cache.py  generate.py  migrate.py  panic.py  view.py
open_thoughts_3/dcft/data_strategies/: commons.py  direct_scale_generator.py  move_hf.py  move_hf_test.py  scale_generator.py  scales.sh  synthetic_data_manager.py  yaml_utils.py
open_thoughts_3/dcft/train/: requirements.txt  test.py  upload_local.py
open_thoughts_3/engine/: dag.py  data_syncer.py  load_dataset.py
open_thoughts_3/engine/maps/: alpaca_map.py  alpaca_seed_task_map.py  base_map.py  binary_classifier_map.py  chat_map.py  critic_map.py  fuser_map.py  generator_map.py  judge_map.py  list_map.py  map_registry.py  open_gpt_map.py  ranker_map.py  scorer_map.py  test_case_map.py  unnatural_instructions_map.py
open_thoughts_3/engine/operators/: __init__.py  completions_operator.py  completions_operator_tacc.py  concatenate_operator.py  dclm_refinedweb_source_operator.py  embedding_operator.py  fasttext_operator.py  function_operator.py  group_by_operator.py  hashing_utils.py  hf_filter_operator.py  hf_source_operator.py  hf_upload_operator.py  json_source_operator.py  merge_operator.py  mix_operator.py  operator.py  shard_operator.py  similarity_filtering_operator.py  train_fasttext_operator.py  tree_search_operator.py  truncate_operator.py
open_thoughts_3/engine/tests/: dummy_functions.py  dummy_source_operator.py  test_execution.py  test_operators.py  test_parse.py
open_thoughts_3/hpc/: README.md  arguments.py  hpc.py  launch.py  upload.py
open_thoughts_3/hpc/dotenv/: alpha.env  claix.env  jupiter.env  (+5 more)
open_thoughts_3/prebuilt_wheels/: fast_bleu-0.0.90-cp310-cp310-linux_x86_64.whl  fast_jl-0.1.3-cp310-cp310-linux_x86_64.whl
(+3351 files in other folders)
